@@ -1,6 +1,6 @@
 class Documentation::FeaturesController < Documentation::ApplicationController
 
-  before_filter :fetch_feature, :only => [:show, :edit, :update, :destroy, :rename]
+  before_filter :fetch_feature, :only => [:show, :edit, :update, :destroy, :rename, :move]
   before_filter :cleanup_raw, :only => [:update]
 
   def index
@@ -42,13 +42,26 @@ class Documentation::FeaturesController < Documentation::ApplicationController
 
   def rename
     if filename_invalid?
-      redirect_to :action => edit, :id => @feature.id
+      redirect_to edit_documentation_feature_path(@feature.id)
       flash[:notice] = 'filename is invalid'
     elsif File.exists?(new_file_path)
       flash[:notice] = 'file with this name exist'
       redirect_to edit_documentation_feature_path(@feature.id)
     else
       feature = CucumberFM::Feature.new(new_file_path, cfm)
+      feature.raw=(@feature.raw)
+      feature.save && @feature.destroy
+      redirect_to edit_documentation_feature_path(feature.id)
+    end
+  end
+
+  def move
+    move_to_path = new_file_path(params[:dir], @feature.filename_without_extension)
+    if File.exists?(move_to_path)
+      flash[:notice] = 'file with this name exist'
+      redirect_to edit_documentation_feature_path(@feature.id)
+    else
+      feature = CucumberFM::Feature.new(move_to_path, cfm)
       feature.raw=(@feature.raw)
       feature.save && @feature.destroy
       redirect_to edit_documentation_feature_path(feature.id)
@@ -76,8 +89,8 @@ class Documentation::FeaturesController < Documentation::ApplicationController
     params[:raw].gsub!(/\r/, '')
   end
 
-  def new_file_path
-    File.join(feature_dir_path, read_config['dir'], "#{new_file_name}.feature")
+  def new_file_path(dir = read_config['dir'], filename = new_file_name)
+    File.join(feature_dir_path, dir, "#{filename}.feature")
   end
 
   # TODO move this methods to feature
