@@ -1,3 +1,4 @@
+* Editor - Basic ::: Scenario: Moving feature
 * Editor - Basic ::: Scenario: Renaming feature
 * Editor - Basic ::: Scenario: Deleting feature
 
